# e-trosa

./: README.md
backend-go/: .air.toml  .env  .env.example  .gitignore  Dockerfile  (+6 more)
backend/etrosa/: .env  .pre-commit-config.yaml  README.md  __init__.py  __main__.py  conftest.py  pyproject.toml  settings.py
backend/etrosa/db/: base.py  utils.py
backend/etrosa/db/dao/: dummy_dao.py  user_dao.py
backend/etrosa/db/migrations/: env.py
backend/etrosa/db/models/: __init__.py  dummy_model.py  trosa_model.py  user_model.py
backend/etrosa/deploy/: Dockerfile  docker-compose.yml
backend/etrosa/etrosa/: conftest.py  settings.py
backend/etrosa/etrosa/db/: config.py
backend/etrosa/etrosa/db/dao/: dummy_dao.py  user_dao.py
backend/etrosa/etrosa/db/migrations/models/: 0_20230223185933_init.py  1_20230223190025_add_user.py  1_20230224145116_add_user.py  2_20230223190326_update_user.py  3_20230223191050_update_user.py
backend/etrosa/etrosa/db/models/: __init__.py  user_model.py
backend/etrosa/etrosa/services/: __init__.py  user_auth.py
backend/etrosa/etrosa/tests/: __init__.py  test_dummy.py
backend/etrosa/etrosa/web/: application.py
backend/etrosa/etrosa/web/api/: __init__.py  router.py
backend/etrosa/etrosa/web/api/dummy/: __init__.py
backend/etrosa/etrosa/web/api/echo/: __init__.py
backend/etrosa/etrosa/web/api/user/: __init__.py  schema.py  views.py
backend/etrosa/services/: jwtauth.py
backend/etrosa/tests/: test_dummy.py
backend/etrosa/web/: __init__.py  application.py  lifetime.py
backend/etrosa/web/api/: router.py
backend/etrosa/web/api/dummy/: views.py
backend/etrosa/web/api/echo/: views.py
backend/etrosa/web/api/monitoring/: __init__.py
backend/etrosa/web/api/trosa/: schema.py
backend/etrosa/web/api/users/: __init__.py  schema.py  views.py
(+74 files in other folders)
